style: fixed layout issues

--- a/home/style.scss
+++ b/home/style.scss
@@ -1,31 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,100;0,300;0,400;0,500;0,600;1,100;1,300&display=swap');
-
-* {
-  font-family: Mulish;
-  text-decoration: none;
-  text-transform: capitalize;
-  box-sizing: border-box;
-  transition: 0.2s linear;
-  outline: none;
-  border: none;
+@import '../css/theme.scss';
+.wrapper {
+  margin: auto;
+  max-width: 1440px;
 }
-
-$black: #233348;
-$light-color: #1f1534;
-$blue: #458ff6;
-$white: #ffffff;
-
 .page-header {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  top: 0;
-  right: 0;
   display: flex;
-  background: $white;
+  background: #ffffff;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
-  //align-items:center;
   padding: 2rem 9%;
+  align-items: center;
   .logo {
     font-size: 18px;
   }
@@ -36,6 +22,10 @@ $white: #ffffff;
       margin: 0 1rem;
       font-weight: 400;
       opacity: 0.5;
+      &:hover,
+      &:active {
+        color: $blue;
+      }
     }
   }
 }
@@ -45,34 +35,38 @@ $white: #ffffff;
 }
 .container {
   display: flex;
-  position: relative;
-  left: 100px;
-
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-evenly;
   .illustration {
     flex: 0 1 36rem;
-    height: 30rem;
-    position: relative;
 
     .description {
-      padding-right: 3em;
-      padding-left: 3em;
+      padding: 3em;
+      margin-top: 5rem;
     }
     .description-title {
       font-size: 48px;
       color: $black;
+      margin: 0%;
     }
     .description-content {
       font-size: 21px;
       color: #7d7987;
     }
-    .illustration-image {
-      margin-top: -15%;
-    }
+
     .consult {
       padding: 1.3em;
       border-radius: 55px;
       background-color: $blue;
       color: $white;
+      cursor: pointer;
+
+      &:hover {
+        color: $blue;
+        background-color: $white;
+        border: 1px solid $blue;
+      }
     }
   }
 }
